# ContentJuiceOS

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.docs/: contentjuiceos-build-order.md  contentjuiceos-project-plan.md
.github/workflows/: ci.yml
sidecar/socket-io-server/: build.mjs  package-lock.json  package.json  pnpm-lock.yaml
sidecar/socket-io-server/src/: index.ts
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/browser-sources/: overlay.html
src-tauri/browser-sources/css/: base.css
src-tauri/browser-sources/js/: base.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  lib.rs  main.rs  types.rs  user_error.rs
src-tauri/src/assets/: commands.rs  error.rs  mod.rs  repository.rs  service.rs  storage.rs  types.rs  validation.rs
src-tauri/src/backup/: commands.rs  engine.rs  mod.rs  scheduler.rs
src-tauri/src/cache/: commands.rs  error.rs  mod.rs  repository.rs  types.rs
src-tauri/src/credentials/: commands.rs  encryption.rs  error.rs  mod.rs  store.rs  types.rs
src-tauri/src/db/: connection.rs  error.rs  migration.rs  mod.rs
src-tauri/src/designs/: commands.rs  error.rs  mod.rs  repository.rs  service.rs  types.rs
src-tauri/src/ffmpeg/: command.rs  commands.rs  error.rs  executor.rs  mod.rs  probe.rs  queue.rs  types.rs
src-tauri/src/platform/: commands.rs  error.rs  mod.rs  repository.rs  types.rs
src-tauri/src/platform/kick/: commands.rs  oauth.rs
src-tauri/src/platform/twitch/: commands.rs  mod.rs  oauth.rs
src-tauri/src/platform/youtube/: commands.rs  oauth.rs
src-tauri/src/rate_limiter/: bucket.rs  commands.rs  config.rs  error.rs  mod.rs  types.rs
src-tauri/src/retry/: commands.rs  config.rs  error.rs  executor.rs  health.rs  mod.rs  queue.rs  types.rs
src-tauri/src/server/: commands.rs  emit.rs  http_server.rs  mod.rs  socket_io_server.rs
src-tauri/src/settings/: commands.rs  defaults.rs  mod.rs  repository.rs  types.rs
src/components/: AssetCard.css  AssetCard.tsx  AssetRow.css  AssetRow.tsx  AssetToolbar.css  AssetToolbar.tsx  DeleteAssetDialog.css  DeleteAssetDialog.tsx  KickConnect.tsx  PlatformCard.tsx  TwitchConnect.tsx  YouTubeConnect.tsx
src/lib/: assets.ts  backup.ts  config.ts  credentials.ts  designs.ts  platform.ts  platformConfig.ts  retry.ts  server.ts  socket.ts
src/lib/editor/: SelectionContext.ts  (+7 more)
src/pages/: AssetsPage.css  AssetsPage.tsx  ConnectionsPage.css  ConnectionsPage.tsx  DesignEditorPage.css  DesignEditorPage.tsx  DesignsPage.css  DesignsPage.tsx
src/types/: config.ts  design.ts  editor.ts  events.ts  index.ts  platform.ts  retry.ts  video.ts
(+34 files in other folders)
