[package]
name = "contentjuiceos"
version = "0.1.0"
description = "Content Creator Operating System"
authors = ["ContentJuiceOS"]
edition = "2021"

[lib]
name = "contentjuiceos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
thiserror = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
