[package]
name = "contentjuiceos"
version = "0.1.0"
description = "Content Creator Operating System"
authors = ["ContentJuiceOS"]
edition = "2021"

[lib]
name = "contentjuiceos_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
thiserror = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
keyring = "3"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
